Implement better sizing for box's divs

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <div>Etch-A-Sketch</div> 
         </div>
     </div>
-    <div class="button-container">
-        <div class="div-num">How Many By How Many Squares?</div>
-    </div>
-    <div class="div-container">
-        <div class="start-box"></div></div>
+    <div class="body-container">
+        <div class="button-container">
+            <div class="div-num">How Many By How Many Squares?</div>
+        </div>
+        <div class="div-container"></div></div>
     <div class="footer-container">
         <div class="footer-text">Luke Hammond</div>
     </div>
